# qvac-ext-lib-whisper.cpp

./: README.md
.github/: CODEOWNERS
bindings/java/src/main/java/io/github/ggerganov/whispercpp/params/: WhisperFullParams.java  WhisperVadParams.java
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt
include/: whisper.h
parakeet-cpp/: .gitignore  CMakeLists.txt  LICENSE  NOTICE  PROGRESS.md  README.md
parakeet-cpp/cmake/: parakeet-cppConfig.cmake.in
parakeet-cpp/examples/: live-mic-attributed.cpp  live-mic.cpp
parakeet-cpp/include/parakeet/: attributed.h  cli.h  diarization.h  engine.h  export.h  log.h  parakeet.h  streaming.h
parakeet-cpp/patches/: README.md  ggml-backend-reg-filename-prefix.patch
parakeet-cpp/scripts/: convert-nemo-to-gguf.py  download-all-models.sh  dump-ctc-reference.py  dump-eou-reference.py  dump-sortformer-reference.py  dump-tdt-reference.py  ref-encoder-from-gguf.py  setup-ggml.sh  streaming-reference.py  verify-gguf-roundtrip.py
parakeet-cpp/src/: backend_util.h  cli_main.cpp  energy_vad.cpp  energy_vad.h  main.cpp  mel_preprocess.cpp  mel_preprocess.h  parakeet_ctc.cpp  parakeet_ctc.h  parakeet_engine.cpp  parakeet_eou.cpp  parakeet_eou.h  parakeet_log.cpp  parakeet_log.h  parakeet_sortformer.cpp  parakeet_sortformer.h  parakeet_tdt.cpp  parakeet_tdt.h  sentencepiece_bpe.cpp  sentencepiece_bpe.h
parakeet-cpp/test/: test_ctc.cpp  test_decoder_determinism.cpp  test_encoder.cpp  test_encoder_capture_parity.cpp  test_eou_streaming.cpp  test_mel.cpp  test_mel_fft_parity.cpp  test_perf_regression.cpp  test_sortformer_parity.cpp  test_sortformer_streaming.cpp  test_streaming.cpp  test_tdt_decoder_parity.cpp  test_tdt_encoder_parity.cpp  test_vk_vs_cpu.cpp
src/: CMakeLists.txt  whisper.cpp
tts-cpp/: .gitignore  CMakeLists.txt  README.md
tts-cpp/scripts/: dump-s3tokenizer-reference.py  dump-streaming-reference.py
tts-cpp/src/: campplus_forward.inc  chatterbox_engine.cpp  gpt2_bpe.h  mel2wav.cpp  mel_extract_stft.cpp  npy.h  voice_encoder.h  voice_features.cpp
